binrw/tests/ui/invalid_magic_int.stderr
error: expected explicit type suffix for integer literal
       e.g 0u64
 --> tests/ui/invalid_magic_int.rs:4:14
  |
4 | #[br(magic = 0)]
  |              ^
