binrw/tests/ui/invalid_magic_int.rs
use binrw::BinRead;

#[derive(BinRead)]
#[br(magic = 0)]
struct Foo;

fn main() {}
